# django-url-shortener

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
.husky/: pre-commit
acortador/: middleware.py  settings.py  urls.py  wsgi.py
shortener/: admin.py  services.py  views.py
shortener/templates/admin/: base_site.html  index.html  login.html
shortener/templates/shortener/: base.html  home.html
shortener/templates/shortener/partials/: _link_card.html
shortener/tests/: test_services.py  test_views.py
static/: output.css
static/src/: input.css
